* Only issue new requests when opening a file. A subsequent read() or mmap()
  may block on the original request, but not create a new one if the first
  one failed.

* Added checks for concurrent threads setting host_file. Prevents leaking
  file structures.

* Allow directories to be removed from dynamic directories (requested by
  Karl Bowden).

* Added more unittests (for mmapping, concurrent access, and removing
  dynamic directories).

* Run tests in an order that tests simpler functions first (in case the
  system crashes).

* Run tests in verbose mode by default.

Changes since 0.1.21:

* Fixed some bugs the unittests found:
  - Listing "/" didn't send a request to the helper.
  - Opening a deleted file triggered a BUG assertion.
  - Revalidate didn't indicate that a changed dentry needed to be looked up
    again (triggering the previous bug).

* Fixed some compiler warnings with GCC 3.3.

* Added unit tests.

* Use /sbin prefix for depmod and modprobe, in case it's not in PATH (Alastair
  Porter).

Changes since 0.1.20:

* Use new f_mapping field to work with Linux kernels >= 2.6.2 (reported by
  Artem Baguinski and Stephen J Craig).

* Correctly detect the version for RedHat kernels (reported by Alastair
  Porter).